--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.16"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
