--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.16"
   },
-  "packageManager": "yarn@1.22.22"
+  "packageManager": "yarn@1.22.22",
+  "dependencies": {
+    "@tailwindcss/typography": "^0.5.15"
+  }
 }
