--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "packageManager": "yarn@1.22.22",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "@tailwindcss/typography": "^0.5.15"
   }
 }
